--- a/index.html
+++ b/index.html
@@ -13,77 +13,84 @@
       padding:20px; min-height:100vh; color:#fff;
     }
     .card{
-      width:100%; max-width:520px;
+      width:100%; max-width:620px;
       background:#fff; color:#333;
-      padding:30px; border-radius:18px;
+      padding:26px; border-radius:18px;
       box-shadow:0 10px 25px rgba(0,0,0,0.2);
       text-align:center;
     }
     h1{ font-size:26px; margin-bottom:6px; color:#2563eb; }
-    p{ color:#555; margin-bottom:18px; }
-    .sensor-box{
-      display:flex; justify-content:space-between; align-items:center;
-      padding:18px 18px; background:#f3f4f6; border-radius:12px;
-      margin-bottom:10px; font-size:17px; font-weight:500;
-      gap:12px;
-    }
-    .label{ color:#374151; text-align:left; }
-    .value{ color:#2563eb; font-weight:700; }
+    p{ color:#555; margin-bottom:14px; }
     .grid{
       display:grid;
       grid-template-columns:1fr;
       gap:10px;
       margin-top:10px;
+      text-align:left;
     }
+    .sensor-box{
+      display:flex; justify-content:space-between; align-items:center;
+      padding:14px 16px; background:#f3f4f6; border-radius:12px;
+      font-size:15px; font-weight:500;
+      gap:10px;
+    }
+    .label{ color:#374151; }
+    .value{ color:#2563eb; font-weight:800; }
+    .badge{
+      display:inline-block;
+      padding:6px 10px;
+      border-radius:999px;
+      font-size:12px;
+      font-weight:700;
+    }
+    .ok{ background:#dcfce7; color:#166534; }
+    .warn{ background:#fee2e2; color:#991b1b; }
+    .muted{ color:#6b7280; font-size:12px; margin-top:10px; }
     button{
-      margin-top:10px; padding:12px 18px; border:none;
+      padding:12px 14px; border:none;
       background:#2563eb; color:#fff; border-radius:10px;
-      cursor:pointer; font-size:15px; font-weight:600;
+      cursor:pointer; font-size:14px; font-weight:700;
       width:100%;
     }
     button:hover{ opacity:0.92; }
     button:disabled{ opacity:0.6; cursor:not-allowed; }
-    footer{ font-size:12px; margin-top:18px; color:#777; }
-    .status{
-      font-size:12px;
-      margin-top:10px;
-      color:#666;
-    }
-    .rowBtns{
-      display:flex; gap:10px; margin-top:10px;
-    }
+    .rowBtns{ display:flex; gap:10px; margin-top:10px; }
     .btnSecondary{ background:#6b7280; }
     input[type="number"]{
       width:120px; padding:8px 10px;
       border-radius:10px; border:1px solid #d1d5db;
       outline:none; font-size:14px;
+      background:#fff;
     }
+    footer{ font-size:12px; margin-top:16px; color:#777; }
+    .status{ font-size:12px; margin-top:10px; color:#666; text-align:left; }
   </style>
 </head>
 
 <body>
   <div class="card">
     <h1>🟢 Incubator Analyzer</h1>
-    <p>Pemantauan suhu realtime (3 titik)</p>
+    <p>Pemantauan realtime: 5 suhu DS18B20 + kelembaban + kebisingan + alarm</p>
 
-    <div class="grid">
-      <div class="sensor-box">
-        <span class="label">Suhu 1</span>
-        <span id="suhu1" class="value">-- °C</span>
-      </div>
-
-      <div class="sensor-box">
-        <span class="label">Suhu 2</span>
-        <span id="suhu2" class="value">-- °C</span>
-      </div>
-
-      <div class="sensor-box">
-        <span class="label">Suhu 3</span>
-        <span id="suhu3" class="value">-- °C</span>
-      </div>
+    <!-- STATUS ALARM -->
+    <div class="sensor-box" style="margin-top:6px;">
+      <span class="label">Status Alarm</span>
+      <span id="alarmBadge" class="badge muted">memuat...</span>
     </div>
 
-    <!-- ===== TIMER PENGUKURAN ===== -->
+    <!-- SENSOR VIEW -->
+    <div class="grid">
+      <div class="sensor-box"><span class="label">Suhu Titik 1</span><span id="t1" class="value">-- °C</span></div>
+      <div class="sensor-box"><span class="label">Suhu Titik 2</span><span id="t2" class="value">-- °C</span></div>
+      <div class="sensor-box"><span class="label">Suhu Titik 3</span><span id="t3" class="value">-- °C</span></div>
+      <div class="sensor-box"><span class="label">Suhu Titik 4</span><span id="t4" class="value">-- °C</span></div>
+      <div class="sensor-box"><span class="label">Suhu Matras</span><span id="t5" class="value">-- °C</span></div>
+
+      <div class="sensor-box"><span class="label">Kelembaban (DHT22)</span><span id="hum" class="value">-- %</span></div>
+      <div class="sensor-box"><span class="label">Kebisingan (KY-037 AO)</span><span id="noise" class="value">--</span></div>
+    </div>
+
+    <!-- TIMER PENGUKURAN -->
     <div style="margin-top:14px; text-align:left;">
       <div class="sensor-box">
         <span class="label">Durasi pengukuran (detik)</span>
@@ -99,15 +106,18 @@
         <button id="btnStart" onclick="startMeasurement()" style="flex:1;">Mulai Pengukuran</button>
         <button id="btnStop" onclick="stopMeasurement(true)" class="btnSecondary" style="flex:1;">Stop</button>
       </div>
+
+      <div class="rowBtns">
+        <button onclick="downloadCSV()" style="flex:1;">Download CSV</button>
+        <button onclick="clearLog()" class="btnSecondary" style="flex:1;">Reset Log</button>
+      </div>
     </div>
 
-    <button onclick="downloadCSV()">Download CSV</button>
     <div class="status" id="status">Status: menunggu data...</div>
-
     <footer>© 2026 IoT Incubator Monitor</footer>
   </div>
 
-  <!-- Firebase (compat, aman untuk GitHub Pages) -->
+  <!-- Firebase compat -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
 
@@ -129,19 +139,29 @@
     const db = firebase.database();
 
     // =========================
-    // 2) DATA TERBARU + LOG CSV
+    // 2) STATE DATA TERBARU
     // =========================
-    const latest = { suhu1: null, suhu2: null, suhu3: null };
-    const logData = []; // isi saat pengukuran berjalan
+    const latest = {
+      t1: null, t2: null, t3: null, t4: null, t5: null,
+      hum: null, noise: null,
+      alarm: null
+    };
 
-    // status pengukuran + timer
-    let measuring = false;
-    let endAt = 0;
-    let timerInterval = null;
+    function setText(id, val, suffix=""){
+      document.getElementById(id).innerText = (val ?? "--") + suffix;
+    }
 
     function nowString(){
       return new Date().toLocaleString("id-ID");
     }
+
+    // =========================
+    // 3) TIMER + LOGGING
+    // =========================
+    let measuring = false;
+    let endAt = 0;
+    let timerInterval = null;
+    const logData = []; // isi saat pengukuran berjalan
 
     function fmtTime(ms){
       const s = Math.max(0, Math.ceil(ms / 1000));
@@ -154,24 +174,21 @@
       document.getElementById("status").innerText = text;
     }
 
-    // catat satu baris kalau semua suhu sudah ada
-    function pushRowIfReady(){
-      if (latest.suhu1 === null || latest.suhu2 === null || latest.suhu3 === null) return;
+    // catat satu row setiap kali ada update realtime (selama pengukuran aktif)
+    function pushLogRow(){
       if (!measuring) return;
 
       logData.push({
         waktu: nowString(),
-        suhu1: latest.suhu1,
-        suhu2: latest.suhu2,
-        suhu3: latest.suhu3
+        t1: latest.t1, t2: latest.t2, t3: latest.t3, t4: latest.t4, t5: latest.t5,
+        hum: latest.hum,
+        noise: latest.noise,
+        alarm: latest.alarm
       });
 
       setStatus(`Status: pengukuran berjalan ⏳ (${logData.length} log)`);
     }
 
-    // =========================
-    // 3) TIMER PENGUKURAN
-    // =========================
     function startMeasurement(){
       if (measuring) return;
 
@@ -181,9 +198,7 @@
         return;
       }
 
-      // reset log
       logData.length = 0;
-
       measuring = true;
       endAt = Date.now() + secs * 1000;
 
@@ -217,44 +232,38 @@
       }
     }
 
-    // =========================
-    // 4) REALTIME UPDATE FIREBASE
-    // =========================
-    db.ref("incubator/suhu1").on("value", snap => {
-      const v = snap.val();
-      latest.suhu1 = v;
-      document.getElementById("suhu1").innerText = (v ?? "--") + " °C";
-      pushRowIfReady();
-    });
+    function clearLog(){
+      logData.length = 0;
+      setStatus("Status: log direset 🧹 (0 log)");
+    }
 
-    db.ref("incubator/suhu2").on("value", snap => {
-      const v = snap.val();
-      latest.suhu2 = v;
-      document.getElementById("suhu2").innerText = (v ?? "--") + " °C";
-      pushRowIfReady();
-    });
-
-    db.ref("incubator/suhu3").on("value", snap => {
-      const v = snap.val();
-      latest.suhu3 = v;
-      document.getElementById("suhu3").innerText = (v ?? "--") + " °C";
-      pushRowIfReady();
-    });
-
-    // =========================
-    // 5) DOWNLOAD CSV
-    // =========================
     function downloadCSV(){
       if (logData.length === 0){
-        alert("Data log masih kosong. Klik 'Mulai Pengukuran' dulu dan tunggu data masuk.");
+        alert("Log kosong. Klik 'Mulai Pengukuran' dulu.");
         return;
       }
 
-      let csv = "waktu,suhu1,suhu2,suhu3\n";
+      const header = [
+        "waktu","t1","t2","t3","t4","suhu_matras",
+        "kelembaban","noise_analog","alarm"
+      ].join(",");
+
+      let csv = header + "\n";
+
       logData.forEach(r => {
-        // aman kalau ada koma di format waktu
         const waktu = `"${String(r.waktu).replaceAll('"','""')}"`;
-        csv += `${waktu},${r.suhu1},${r.suhu2},${r.suhu3}\n`;
+        const line = [
+          waktu,
+          r.t1 ?? "",
+          r.t2 ?? "",
+          r.t3 ?? "",
+          r.t4 ?? "",
+          r.t5 ?? "",
+          r.hum ?? "",
+          r.noise ?? "",
+          (r.alarm === true) ? 1 : (r.alarm === false ? 0 : "")
+        ].join(",");
+        csv += line + "\n";
       });
 
       const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
@@ -262,13 +271,50 @@
 
       const a = document.createElement("a");
       a.href = url;
-      a.download = `data_incubator_3suhu_${Date.now()}.csv`;
+      a.download = `incubator_log_${Date.now()}.csv`;
       document.body.appendChild(a);
       a.click();
       document.body.removeChild(a);
 
       URL.revokeObjectURL(url);
     }
+
+    // =========================
+    // 4) REALTIME LISTENERS
+    // =========================
+    function setAlarmBadge(val){
+      const el = document.getElementById("alarmBadge");
+      if (val === true){
+        el.className = "badge warn";
+        el.innerText = "ALARM AKTIF 🔔";
+      } else if (val === false){
+        el.className = "badge ok";
+        el.innerText = "Normal ✅";
+      } else {
+        el.className = "badge muted";
+        el.innerText = "memuat...";
+      }
+    }
+
+    // suhu titik 1-4
+    db.ref("incubator/suhu/t1").on("value", snap => { latest.t1 = snap.val(); setText("t1", latest.t1, " °C"); pushLogRow(); });
+    db.ref("incubator/suhu/t2").on("value", snap => { latest.t2 = snap.val(); setText("t2", latest.t2, " °C"); pushLogRow(); });
+    db.ref("incubator/suhu/t3").on("value", snap => { latest.t3 = snap.val(); setText("t3", latest.t3, " °C"); pushLogRow(); });
+    db.ref("incubator/suhu/t4").on("value", snap => { latest.t4 = snap.val(); setText("t4", latest.t4, " °C"); pushLogRow(); });
+
+    // suhu matras
+    db.ref("incubator/suhu_matras").on("value", snap => { latest.t5 = snap.val(); setText("t5", latest.t5, " °C"); pushLogRow(); });
+
+    // kelembaban
+    db.ref("incubator/kelembaban").on("value", snap => { latest.hum = snap.val(); setText("hum", latest.hum, " %"); pushLogRow(); });
+
+    // noise analog
+    db.ref("incubator/noise/analog").on("value", snap => { latest.noise = snap.val(); setText("noise", latest.noise, ""); pushLogRow(); });
+
+    // alarm
+    db.ref("incubator/alarm").on("value", snap => { latest.alarm = snap.val(); setAlarmBadge(latest.alarm); pushLogRow(); });
+
+    setStatus("Status: listener Firebase aktif ✅");
   </script>
 </body>
 </html>
