Update sensor labels and footer text in index.html

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <div class="sensor-box"><span class="label">Suhu Titik 4</span><span id="t4" class="value">-- °C</span></div>
       <div class="sensor-box"><span class="label">Suhu Matras</span><span id="t5" class="value">-- °C</span></div>
 
-      <div class="sensor-box"><span class="label">Kelembaban (DHT22)</span><span id="hum" class="value">-- %</span></div>
-      <div class="sensor-box"><span class="label">Kebisingan (KY-037 AO)</span><span id="noise" class="value">--</span></div>
+      <div class="sensor-box"><span class="label">Kelembaban</span><span id="hum" class="value">-- %</span></div>
+      <div class="sensor-box"><span class="label">Kebisingan</span><span id="noise" class="value">--</span></div>
     </div>
 
     <!-- TIMER PENGUKURAN -->
@@ -114,7 +114,7 @@
     </div>
 
     <div class="status" id="status">Status: menunggu data...</div>
-    <footer>© 2026 IoT Incubator Monitor</footer>
+    <footer>© 2026 Ryan Ramadhani TA</footer>
   </div>
 
   <!-- Firebase compat -->
