Update footer text in index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
 
     <div class="status" id="status">Status: menunggu data...</div>
-    <div class="footer">© 2026 IoT Incubator Monitor</div>
+    <div class="footer">© 2026 TA Ryan Ramadhani Incubator Analyzer Monitoring</div>
   </div>
 
   <!-- Firebase compat (aman untuk GitHub Pages) -->
